[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/UIScenes/Settings_menu.gd" type="Script" id=2]
[ext_resource path="res://UI/Art/plain-grey-background-j1ae84a49c936dxy.jpg" type="Texture" id=3]
[ext_resource path="res://UI/Art/plain-light-grey.jpg" type="Texture" id=4]
[ext_resource path="res://UI/Art/plain-light-grey-pressed.jpg" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0.964706, 0, 0, 1 )
extra_spacing_bottom = 10
font_data = ExtResource( 1 )

[node name="Settings_menu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -240.0
margin_right = 360.0
margin_bottom = 240.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Column1" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 206.0
margin_bottom = 400.0
size_flags_horizontal = 3

[node name="MasterVolume" type="Label" parent="HBoxContainer/Column1"]
margin_right = 206.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "Volume"

[node name="MasterVolumeVolumeButton" type="HSlider" parent="HBoxContainer/Column1"]
margin_top = 39.0
margin_right = 206.0
margin_bottom = 55.0
min_value = -50.0
max_value = 0.0

[node name="Column2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 216.0
margin_right = 423.0
margin_bottom = 400.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="Resolution" type="Label" parent="HBoxContainer/Column2"]
margin_right = 207.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "Resolution"

[node name="ResolutionButton" type="OptionButton" parent="HBoxContainer/Column2"]
margin_top = 39.0
margin_right = 207.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Column3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 433.0
margin_right = 640.0
margin_bottom = 400.0
size_flags_horizontal = 3

[node name="Exit" type="TextureButton" parent="HBoxContainer/Column3"]
margin_right = 207.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer/Column3/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="HBoxContainer/Column1/MasterVolumeVolumeButton" to="." method="_on_MasterVolumeVolumeButton_value_changed"]
[connection signal="item_selected" from="HBoxContainer/Column2/ResolutionButton" to="." method="_on_ResolutionButton_item_selected"]
[connection signal="pressed" from="HBoxContainer/Column3/Exit" to="." method="_on_Exit_pressed"]
